--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A portfolio built in React for Cliff Folsom, showcasing some of the things he has learned over the years."
     />
     <title>Folsom-Prism</title>
    </head>
